--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        #banner-container{
+            background-image: url(images/bgbanner.png);
+        }
+    </style>
 
 </head>
 <body>
@@ -34,5 +39,57 @@
           </div>
     </header>
 
+    <!----------------------------------- banner part start  -->
+    <section class="container mx-auto mt-12">
+        <div id="banner-container" class="flex bg-slate-950 border rounded-3xl">
+            <!-- banner details part -->
+            <div class="banner-details  p-9 flex-auto w-64">
+                <h1 class="text-5xl text-gray-100 font-extrabold mb-3"> Welcome to the <span class="bg-gradient-to-r from-blue-600 via-indigo-500 to-indigo-400 inline-block text-transparent bg-clip-text"> ReTro</span> Forum</h1>
+                <p class="text-x mb-5 text-gray-300"> Share your favorite opinion and win and wp forum coffee mug!</p>
+                    <input type="text" class="grow text-xl py-2 px-3 me-2 border rounded-full" placeholder="Search" />
+                  <button class="btn btn-primary rounded-full">Search</button>
+            </div>
+            <!-- banner register part  -->
+            <div class="banner-register  flex-auto w-32 flex justify-center items-center">
+                <div class="overflow-x-auto">
+                    <table class="table fw-500 bg-white">
+                      <!-- head -->
+                      <tbody>
+                        <!-- row 1 -->
+                        <tr>
+                          <td>Register user</td>
+                          <td>01</td>
+                        </tr>
+                        <!-- row 2 -->
+                        <tr>
+                          <td>Fourm</td>
+                          <td>05</td>
+                        </tr>
+                        <!-- row 3 -->
+                        <tr>
+                          <td>Topics</td>
+                          <td>01</td>
+                        </tr>
+                        <!-- row 4 -->
+                        <tr>
+                            <td>Replies</td>
+                            <td>01</td>
+                          </tr>
+                      </tbody>
+                    </table>
+                  </div>
+            </div>
+        </div>
+    </section>
+
+        <!-------------------- lets discuss section start  -->
+        <section class="container mt-20 mx-auto">
+            <div>
+                <p class="text-center font-extrabold text-2xl mb-5">Let’s Discuss</p>
+                <p class="text-center text-gray-600 mx-20">Yes, you can run unit tests and view the results directly within the app. The  integrated testing features allow for a streamlined .</p>
+            </div>
+        </section>
+
+        <!----------------- All Post API section part start  -->
 </body>
 </html>
