all posts card design

--- a/index.html
+++ b/index.html
@@ -91,5 +91,62 @@
         </section>
 
         <!----------------- All Post API section part start  -->
+        <section class="container mx-auto mb-20 mt-20">
+            <div class="all-post-container">
+
+              <div class="flex">
+                <!-- flex-1  -->
+                <div class="flex-auto w-64 border p-5 rounded-lg hover:border-teal-500">
+                    <div class="cart flex ">
+                        <div class="avatar">
+                            <div class="w-20 h-20 rounded-xl">
+                              <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                            </div>
+                          </div>
+                          <div class="pb-2">
+                            <p> <span class="ms-4 text-sm font-semibold">#coding</span> <span class="ms-4 text-sm font-semibold">Author: Rajib</span></p>
+                            <h4 class="ms-4 font-bold text-xl mt-3">10 Kids Unaware of Their Halloween Costume</h4>
+                            <p class="ms-4 text-gray-600 mt-2 pb-5"> It’s one thing to subject yourself to ha Halloween costume mishap because, hey that’s your prerogative</p>
+
+                            <!-- icons part  -->
+                             <div class="flex justify-between border-dashed border-t-4 pt-3  ">
+                                    <div>
+                                        <table class="table">
+                                            <tbody>
+                                              <tr>
+                                                <td><i class="fa-regular fa-message me-1"></i><span></span></td>
+                                                <td><i class="fa-regular fa-eye me-1"></i><span></span></td>
+                                                <td><i class="fa-regular fa-clock me-1"></i><span></span></td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                    </div>
+                                    <div>
+                                        <button class="btn border rounded-full bg-green-600"><i class="fa-solid fa-envelope-open-text"></i></button>
+                                    </div>
+                             </div>
+                          </div>
+                    </div>
+                </div>
+                <!-- flex -2  -->
+                <div class="flex-1 w-14 p-5">
+                    <div class="flex justify-between">
+                        <p class="font-bold">Title</p>
+                        <p><i class="fa-solid fa-check-double" style="color: #63E6BE;"></i>mark as read</p>
+                    </div>
+                    <!-- mark as read card  -->
+                     <div class="mark-read-container">
+                        <div class="mark-card flex justify-between border p-3 mt-5 rounded-lg">
+                            <p class="font-semibold">tittle</p>
+                            <p><i class="fa-regular fa-eye me-1"></i><span>232</span></p>
+                        </div>
+                     </div>
+                </div>
+                
+              </div>
+            </div>
+        </section>
+
+        <script src="javascript.js"></script>
 </body>
 </html>
